// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MetaFoxLogo does not set icon height and width when unsetIconHeight is true 1`] = `
<div>
  <button
    class="mm-box app-header__logo-container mm-box--background-color-transparent"
    data-testid="app-header-logo"
  >
    <div />
    <span
      aria-hidden="true"
      class="app-header__metafox-logo--icon"
      style="background-image: url(./images/logo/metamask-fox.svg); background-position: center; background-repeat: no-repeat; background-size: contain; display: inline-block;"
    />
  </button>
</div>
`;

exports[`MetaFoxLogo should match snapshot with img width and height default set to 42 1`] = `
<div>
  <button
    class="mm-box app-header__logo-container mm-box--background-color-transparent"
    data-testid="app-header-logo"
  >
    <div />
    <span
      aria-hidden="true"
      class="app-header__metafox-logo--icon"
      style="background-image: url(./images/logo/metamask-fox.svg); background-position: center; background-repeat: no-repeat; background-size: contain; display: inline-block; height: 42px; width: 42px;"
    />
  </button>
</div>
`;
